RESOLVED FIXED54201
[Qt] In trunk with Qt Multimedia the full screen mode doesn't work.
https://bugs.webkit.org/show_bug.cgi?id=54201
Summary [Qt] In trunk with Qt Multimedia the full screen mode doesn't work.
Alexis Menard (darktears)
Reported 2011-02-10 05:59:33 PST
When browsing website with HTML5 video tag, there is no way to go to fullscreen. The button doesn't appear.
Attachments
Patch to implement a default fullscreen handler... (13.53 KB, patch)
2011-02-10 06:10 PST, Alexis Menard (darktears)
kling: review-
Patch to implement a default fullscreen handler... v2 (13.58 KB, patch)
2011-02-10 07:51 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-02-10 06:10:53 PST
Created attachment 81966 [details] Patch to implement a default fullscreen handler... Add a default handler for the fullscreen playback when there is no platform plugin install.
WebKit Review Bot
Comment 2 2011-02-10 06:12:46 PST
Attachment 81966 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:28: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2011-02-10 06:33:08 PST
Comment on attachment 81966 [details] Patch to implement a default fullscreen handler... View in context: https://bugs.webkit.org/attachment.cgi?id=81966&action=review > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:36 > +static const int hideMouseCursorDelay = 3000; gHideMouseCursorDelay > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:44 > + QPalette palette; Shouldn't we be amending the existing palette() here? > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:67 > + connect(&m_cursorTimer, SIGNAL(timeout()), this, SLOT(hideCursor())); Multiple calls to show() will cause signal/slot connections to accumulate. You can pass Qt::UniqueConnection as the 5th argument to avoid this. > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:108 > + } else if (ev->key() == Qt::Key_Escape) { > + close(); > + } Coding style, no { } for single-statement blocks. > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.h:44 > + ~FullScreenVideoWidget(); virtual ~FullScreenVideoWidget(); > Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.h:55 > +protected slots: Might as well be private.
Alexis Menard (darktears)
Comment 4 2011-02-10 07:51:50 PST
Created attachment 81981 [details] Patch to implement a default fullscreen handler... v2 Andreas' comments taken into account.
WebKit Review Bot
Comment 5 2011-02-10 07:54:35 PST
Attachment 81981 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp:28: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 6 2011-02-10 08:19:51 PST
Comment on attachment 81981 [details] Patch to implement a default fullscreen handler... v2 r=me
WebKit Commit Bot
Comment 7 2011-02-10 10:15:50 PST
Comment on attachment 81981 [details] Patch to implement a default fullscreen handler... v2 Clearing flags on attachment: 81981 Committed r78240: <http://trac.webkit.org/changeset/78240>
WebKit Commit Bot
Comment 8 2011-02-10 10:15:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.