2011-02-10  Alexis Menard  <alexis.menard@nokia.com>

Reviewed by Andreas Kling.

        [Qt] In trunk with Qt Multimedia the full screen mode doesn't work.
        https://bugs.webkit.org/show_bug.cgi?id=54201

        Add files for the fullscreen video playback handling. It also fix
        a missing header.

        * WebCore.pro:
2011-02-10  Alexis Menard  <alexis.menard@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] In trunk with Qt Multimedia the full screen mode doesn't work.
        https://bugs.webkit.org/show_bug.cgi?id=54201

        Add a default fullscreen handler when there is no plaftform plugin
        installed. This handler creates a fullscreen QVideoWidget and plays
        the video. Space pause/resume the video playback and esc quit the
        fullscreen mode.

        * WebCoreSupport/FullScreenVideoQt.cpp:
        (WebCore::DefaultFullScreenVideoHandler::DefaultFullScreenVideoHandler):
        (WebCore::DefaultFullScreenVideoHandler::~DefaultFullScreenVideoHandler):
        (WebCore::DefaultFullScreenVideoHandler::requiresFullScreenForVideoPlayback):
        (WebCore::DefaultFullScreenVideoHandler::enterFullScreen):
        (WebCore::DefaultFullScreenVideoHandler::exitFullScreen):
        (WebCore::FullScreenVideoQt::FullScreenVideoQt):
        * WebCoreSupport/FullScreenVideoQt.h:
        * WebCoreSupport/FullScreenVideoWidget.cpp: Added.
        (WebCore::FullScreenVideoWidget::FullScreenVideoWidget):
        (WebCore::FullScreenVideoWidget::~FullScreenVideoWidget):
        (WebCore::FullScreenVideoWidget::show):
        (WebCore::FullScreenVideoWidget::closeEvent):
        (WebCore::FullScreenVideoWidget::event):
        (WebCore::FullScreenVideoWidget::keyPressEvent):
        (WebCore::FullScreenVideoWidget::hideCursor):
        (WebCore::FullScreenVideoWidget::showCursor):
        * WebCoreSupport/FullScreenVideoWidget.h: Added.

Canonical link: https://commits.webkit.org/68253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78240 268f45cc-cd09-0410-ab3c-d52691b4dbfc